6 Jan 26 - chore: got tailwind working (finally!)

--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <link rel="icon" type="image" href="/favicon-32x32.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather App</title>
+
+    <!--Google Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet"> 
   </head>
-  <body class="bg-blue-800">
+  <body class="bg-blue-950 font-dm">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
